sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:9: error: not found: value posJABouger
    posJABouger = (getHoleBase()-1)%nbrB;
    ^NaiveBaseball:11: error: not found: value posJABouger
    numABouger = longerWay(nbrB, posJABouger)
                                 ^NaiveBaseball:12: error: not found: value posJABouger
    move(numABouger,posJABouger)
                    ^NaiveBaseball:20: warning: enclosing method longerWay has result type Unit: return value discarded
    return player2
    ^NaiveBaseball:30: warning: enclosing method longerWay has result type Unit: return value discarded
    return player1
    ^NaiveBaseball:34: warning: enclosing method longerWay has result type Unit: return value discarded
    return player2
    ^